remove unused lib

--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "fs": "^0.0.1-security",
     "node-fetch": "^3.3.1",
-    "path": "^0.12.7",
-    "threads-api": "^1.4.2"
+    "path": "^0.12.7"
   }
 }
