--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
   "name": "threadsmediadownloader",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "ts-node ."
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.5.0",
     "fs": "^0.0.1-security",
     "path": "^0.12.7",
-    "threads-api": "^1.6.3"
+    "threads-api": "^1.6.3",
+    "ts-node": "^10.9.1"
+  },
+  "devDependencies": {
+    "@types/node": "^20.6.3"
   }
 }
