--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "threads-dl",
+  "name": "threadsdl",
   "version": "2.1.0",
   "description": "Threads.net Photo and Video API Downloader",
   "main": "./dist/index.js",
