--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "threadsdl",
-  "version": "2.1.1-b",
+  "version": "2.1.2",
   "description": "Threads.net Photo and Video API Downloader",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
